--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,73 +1,27 @@
-require:
-  - rubocop-rspec
-
-Rails:
-  Enabled: true
+inherit_from:
+  - https://relaxed.ruby.style/rubocop.yml
 
 AllCops:
-  TargetRubyVersion: 2.3.8
-  TargetRailsVersion: 5.2
   Exclude:
-    - db/schema.rb
     - bin/*
-    - node_modules/**/*
-    # Temporary files
-    - tmp/**/*
+    - spec/dummy/**/*
+  NewCops: enable
 
-Rails/InverseOf:
+Gemspec/RequiredRubyVersion:
   Enabled: false
 
-Style/Documentation:
+Naming/FileName:
   Enabled: false
 
-Metrics/ClassLength:
-  # Default value is 100
-  Max: 150
-
-Metrics/LineLength:
-  # Default is 80
+Layout/LineLength:
+  Enabled: true
   Max: 120
 
-Metrics/ModuleLength:
-  # Default is 100
-  Max: 150
+Style/HashEachMethods:
+  Enabled: true
 
-Metrics/ParameterLists:
-  # Default is 5
-  Max: 6
+Style/HashTransformKeys:
+  Enabled: true
 
-RSpec/ExampleLength:
-  # Default is 10
-  Max: 20
-
-Style/FrozenStringLiteralComment:
-  # Deface DOES edit strings in place
-  Exclude:
-    - 'app/overrides/**/*'
-
-RSpec/MultipleExpectations:
-  # Default is 3
-  Max: 5
-
-RSpec/NestedGroups:
-  # Default is 3
-  Max: 6
-
-Metrics/AbcSize:
-  Max: 25
-
-Metrics/BlockLength:
-  # This value double the rubocop default
-  Max: 50
-
-Metrics/CyclomaticComplexity:
-  # This value double the rubocop default
-  Max: 12
-
-Metrics/MethodLength:
-  # This value double the rubocop default
-  Max: 20
-
-Metrics/PerceivedComplexity:
-  # Default is 7
-  Max: 10
+Style/HashTransformValues:
+  Enabled: true
