--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,10 +1,13 @@
+---
 inherit_from:
   - https://relaxed.ruby.style/rubocop.yml
 
 AllCops:
   Exclude:
     - bin/*
+    - db/schema.rb
     - spec/dummy/**/*
+    - vendor/**/*
   NewCops: enable
 
 Gemspec/RequiredRubyVersion:
