--- a/.github/workflows/specs.yml
+++ b/.github/workflows/specs.yml
@@ -8,12 +8,12 @@ on:
     branches: [master]
 
 jobs:
-  test:
+  tests:
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        ruby: ['2.5', '2.6', '2.7']
+        ruby: ['2.6', '2.7']
 
     steps:
       - name: Checkout
