--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -6,6 +6,7 @@ AllCops:
   Exclude:
     - bin/*
     - db/schema.rb
+    - gemfiles/**/*
     - spec/dummy/**/*
     - vendor/**/*
   NewCops: enable
