--- a/.github/workflows/specs_rails61.yml
+++ b/.github/workflows/specs_rails61.yml
@@ -1,23 +1,23 @@
 ---
-name: Specs Rails 6.1
+name: Specs Rails 6.1 with ActiveAdmin 2.9
 
 on:
-  push:
-    branches: [master]
   pull_request:
+    branches: [master]
+  push:
     branches: [master]
 
 jobs:
-  tests:
+  test:
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        ruby: ['2.6', '2.7', '3.0']
-        gemfile: ['rails61_activeadmin29', 'rails61_activeadmin']
+        ruby: ['3.0']
 
     env:
-      BUNDLE_GEMFILE: ${{ github.workspace }}/gemfiles/${{ matrix.gemfile }}.gemfile
+      RAILS_VERSION: 6.0
+      ACTIVEADMIN_VERSION: 2.9.0
 
     steps:
       - name: Checkout repository
@@ -28,6 +28,9 @@ jobs:
         with:
           ruby-version: ${{ matrix.ruby }}
           bundler-cache: true
+
+      - name: Database setup
+        run: bin/rails db:create db:migrate db:test:prepare
 
       - name: Run tests
         run: bundle exec rspec --profile
